vbnc/vbnc/tests/Errors/30074-1.vb
Module bug
    Sub Main()
        Const i As Integer = 2
        For i = 1 To 2

        Next
    End Sub
End Module